# aftab

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  videos.md
aftab/: Aftab.py  Agent.py  __init__.py  __main__.py  common.py  constants.py  typing.py
aftab/agents/: BaseAgent.py  DuellingAgent.py  FQFAgent.py  PQNAgent.py  __init__.py
aftab/encoders/: AlphaEncoder.py  BetaEncoder.py  DQNEncoder.py  DeltaEncoder.py  EMAGammaEncoder.py  EpsilonEncoder.py  EtaEncoder.py  GammaEncoder.py  GammaHadamaxEncoder.py  GammaHadamaxReLUEncoder.py  HadamaxDeltaEncoder.py  HadamaxEpsilonEncoder.py  HadamaxGammaEncoder.py  HadamaxGammaEncoderV1.py  HadamaxGammaEncoderV1Mixed.py  HadamaxGammaEncoderV2.py  HadamaxLayer.py  HadamaxNatureDQNEncoder.py  HadamaxZetaEncoder.py  NatureDQNEncoder.py  ResidualGammaBlock.py  ResidualGammaEncoder.py  SimpleAttentionGammaEncoder.py  ThetaEncoder.py  ZetaEncoder.py  __init__.py
aftab/functions/: __init__.py  batched_random_shift.py  calculate_matched_width.py  epsilon_greedy_vectorized.py  gompertz.py  lambda_returns.py  lambda_returns_quantile.py  mse_loss.py  random_activation_function.py  random_shifts.py
aftab/jax/: AftabJax.py
aftab/maps/: AftabEncoderMap.py  __init__.py  acceptable_frames_map.py  agents.py  augmentation.py  encoder_map.py  encoders.py  encoders_map.py  network_map.py  networks.py  (+3 more)
docs/: index.html
examples/: run_experiments.py
mermaid/: alpha.txt  beta.txt  delta.txt  epsilon.txt  eta.txt  gamma.txt  nature.txt  theta.txt  zeta.txt
scripts/: README.md  setup_environment.sh  submit_slurm.sh
(+106 files in other folders)
