[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aftab"
version = "0.0.50"
authors = [
  { name="Taha Shieenavaz", email="tahashieenavaz@gmail.com" },
]
description = "A highly configurable implementation of our approach in the Aftab paper, benchmarking different convolutional neural networks and their effects on the final results."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["numpy==1.26.4", "envpool==0.8.4", "baloot", "torch"]
keywords = ["reinforcement learning", "dqn", "aftab", "drl", "pqn", "deep reinforcement learning", "cnn"]
license = { file = "LICENSE" }
urls = { Homepage="https://github.com/tahashieenavaz/aftab", Repository="https://github.com/tahashieenavaz/aftab", Documentation="https://github.com/tahashieenavaz/aftab#readme" }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "figures*", "mermaid*", "scripts*"]

[tool.setuptools.package-data]
aftab = ["*.md", "*.txt", "*.png"]